--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       
       - name: Build C++
         run: |
-          g++ build/main.cpp -o Mayakovsky.exe -static -municode
+          g++ build/main.cpp -o Mayakovsky.exe -static -mconsole -municode
 
       - name: Push
         uses: actions/upload-artifact@v4
