--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -14,14 +14,20 @@ jobs:
       - name: 📥 Клонируем репозиторий
         uses: actions/checkout@v3
 
-      - name: 🔧 Устанавливаем 32-битный MinGW
+      - name: 🔧 Скачиваем и настраиваем 32-битный MinGW
         run: |
-          choco install mingw --forcex86 -y
-          echo "C:\ProgramData\chocolatey\bin" >> $GITHUB_PATH
+          Invoke-WebRequest -Uri "https://downloads.sourceforge.net/mingw-w64/i686-12.2.0-release-win32-sjlj.zip" -OutFile "mingw32.zip"
+          Expand-Archive mingw32.zip -DestinationPath "C:\mingw32"
+          echo "C:\mingw32\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+
+      - name: 🔍 Проверяем установленный компилятор
+        run: |
+          i686-w64-mingw32-g++ --version
 
       - name: 🛠️ Компилируем 32-битный EXE
         run: |
-          g++ build/main.cpp -o Mayakovsky-32.exe -static -mconsole -m32
+          i686-w64-mingw32-g++ build/main.cpp -o Mayakovsky-32.exe -static -mconsole
+          ls -lah
 
       - name: 📤 Загружаем 32-битный EXE
         uses: actions/upload-artifact@v4
